# shared-lmdb

./: .gitignore  Cargo.toml  README.md
docs/: integration-guide.md
docs/architecture/: error-handling.md  key-encoding.md  overview.md  postgres-sync.md  rotation-policies.md
examples/: lmdb_batch_bench.rs
qa/: codex-qa-report-iteration-1.md  codex-qa-report-iteration-2.md  codex-qa-report-iteration-3.md
src/: lib.rs  migrations.rs  postgres_sync.rs
tests/: migrations.rs  multi_db_store.rs  timeseries_store.rs
