[package]
name = "shared-lmdb"
version = "0.1.0"
edition = "2024"

[features]
default = []
postgres-sync = ["dep:tokio-postgres", "dep:tokio"]
binary-keys = []

[dependencies]
heed = "0.20"
thiserror = "2"
tokio-postgres = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3"
