[package]
name = "shared-lmdb"
version = "0.1.0"
edition = "2024"

[features]
default = []
postgres-sync = ["dep:tokio-postgres", "dep:tokio"]
binary-keys = []
migrations = ["dep:blake3"]
migrations-test = ["migrations", "dep:proptest"]

[dependencies]
heed = { version = "0.22.1", default-features = false }
thiserror = "2"
blake3 = { version = "1", optional = true }
tokio-postgres = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
proptest = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
